@@ -1,3 +1,14 @@
+2011-07-28  Gavin Barraclough  <barraclough@apple.com>
+
+        https://bugs.webkit.org/show_bug.cgi?id=65325
+        Performance tweak to parseInt
+
+        Reviewed by Oliver Hunt.
+
+        * runtime/JSGlobalObjectFunctions.cpp:
+        (JSC::globalFuncParseInt):
+            - parseInt applied to small positive numbers = floor.
+
 2011-07-28  Dan Bernstein  <mitz@apple.com>
 
         Build fix.
